# AchSplit

./: .gitignore  CMakeLists.txt  Makefile
data/: settings.json
data/games/test/: test.json
docs/: README.eng.md  README.rus.md  TODO  as.rc  settings.json  test.json
include/: arch.hpp  checkpoint.hpp  defines.hpp  externs.hpp  headers.hpp  hotkey.hpp  keyboard.hpp  misc.hpp  resources.hpp  settings.hpp  stopwatch.hpp  timer.hpp  timestamp.hpp
src/: arch.cpp  arch_unix.cpp  arch_win.cpp  checkpoint.cpp  hotkey.cpp  keyboard.cpp  main.cpp  misc.cpp  resources.cpp  settings.cpp  stopwatch.cpp  timer.cpp  timestamp.cpp
